Writing data to file

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:showIn="@layout/app_bar_stroop_test"
-        tools:context=".StroopTestActivity">
-
+        android:background="@android:color/background_dark"
+        tools:context=".MainActivity" tools:background="@android:color/background_dark">
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="247dp"
@@ -28,7 +26,7 @@
         <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:weightSum="1" android:gravity="center"
+                android:layout_height="70dp" android:weightSum="1" android:gravity="center"
                 android:layout_weight="0.33">
             <Button
                     android:layout_height="match_parent" android:id="@+id/upButton" android:layout_weight="0.2"
@@ -38,7 +36,7 @@
         <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:gravity="center" android:weightSum="1"
+                android:layout_height="70dp" android:gravity="center" android:weightSum="1"
                 android:layout_weight="0.33">
             <Button
                     android:layout_width="0dp"
@@ -55,7 +53,7 @@
         <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:weightSum="1" android:gravity="center"
+                android:layout_height="70dp" android:weightSum="1" android:gravity="center"
                 android:layout_weight="0.33">
             <Button
                     android:layout_width="0dp"
