--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,69 +7,95 @@
         android:layout_height="match_parent"
         android:background="@android:color/background_dark"
         tools:context=".MainActivity" tools:background="@android:color/background_dark">
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="247dp"
-            android:inputType="textMultiLine"
-            android:ems="10"
-            android:id="@+id/stimuliTextView" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:text="Lorem impsum"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textAlignment="center"
-            android:gravity="center_vertical|center"/>
+    <ScrollView
+            android:id="@+id/scroll"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scrollbars="vertical"
+            android:fillViewport="true"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout" android:layout_marginTop="8dp"
+            android:fadeScrollbars="false"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent">
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:ems="10"
+                android:id="@+id/descriptionTextView" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:text="Lorem impsum"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+                android:textColor="@android:color/white"
+                android:textAlignment="viewStart" android:textSize="18sp"
+                android:verticalScrollbarPosition="defaultPosition" android:scrollbars="vertical"/>
+    </ScrollView>
     <LinearLayout
             android:orientation="vertical"
-            android:layout_width="368dp"
-            android:layout_height="wrap_content" tools:layout_editor_absoluteX="8dp"
+            android:layout_width="340dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:weightSum="1.5" android:gravity="center">
+            app:layout_constraintBottom_toBottomOf="parent" android:weightSum="1.5" android:gravity="center"
+            android:id="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">
         <LinearLayout
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="70dp" android:weightSum="1" android:gravity="center"
-                android:layout_weight="0.33">
-            <Button
-                    android:layout_height="match_parent" android:id="@+id/upButton" android:layout_weight="0.2"
-                    android:layout_width="0dp" android:textAlignment="center" android:layout_marginLeft="0dp"
-                    android:layout_marginRight="0dp" android:layout_marginBottom="0dp"/>
-        </LinearLayout>
-        <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="80dp" android:gravity="center" android:weightSum="1"
-                android:layout_weight="0.33">
-            <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent" android:id="@+id/leftButton" android:layout_weight="0.2"
-                    android:layout_marginBottom="5dp" android:layout_marginTop="5dp"/>
-            <Button
-                    android:layout_width="0dp" android:textAlignment="center"
-                    android:layout_height="match_parent" android:id="@+id/fakeButton" android:layout_weight="0.2"
-                    android:visibility="invisible" android:layout_margin="10dp"/>
-            <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent" android:id="@+id/rightButton" android:layout_weight="0.2"
-                    style="@style/Widget.AppCompat.Button" android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"/>
-        </LinearLayout>
-        <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="70dp" android:weightSum="1" android:gravity="center"
-                android:layout_weight="0.33">
-            <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent" android:id="@+id/downButton" android:layout_weight="0.2"/>
+                android:layout_height="match_parent" android:layout_weight="0.33" android:id="@+id/buttonsLayout">
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp" android:weightSum="1" android:gravity="center"
+                    android:layout_weight="0.33">
+                <Button
+                        android:layout_height="match_parent" android:id="@+id/upButton" android:layout_weight="0.2"
+                        android:layout_width="0dp" android:textAlignment="center" android:layout_marginLeft="0dp"
+                        android:layout_marginRight="0dp" android:layout_marginBottom="0dp"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp" android:gravity="center" android:weightSum="1"
+                    android:layout_weight="0.33">
+                <Button
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent" android:id="@+id/leftButton" android:layout_weight="0.2"
+                        android:layout_marginBottom="5dp" android:layout_marginTop="5dp"/>
+                <Button
+                        android:layout_width="0dp" android:textAlignment="center"
+                        android:layout_height="match_parent" android:id="@+id/fakeButton" android:layout_weight="0.2"
+                        android:visibility="invisible" android:layout_margin="10dp"/>
+                <Button
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent" android:id="@+id/rightButton" android:layout_weight="0.2"
+                        style="@style/Widget.AppCompat.Button" android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp" android:weightSum="1" android:gravity="center"
+                    android:layout_weight="0.33">
+                <Button
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent" android:id="@+id/downButton" android:layout_weight="0.2"/>
+            </LinearLayout>
         </LinearLayout>
         <Button
-                android:layout_width="120dp"
+                android:layout_width="180dp"
                 android:layout_height="match_parent" android:id="@+id/confirmButton" android:layout_weight="0.5"
                 android:layout_marginTop="10dp"/>
     </LinearLayout>
     <TextView
-            android:layout_width="70dp"
-            android:layout_height="30dp"
-            android:id="@+id/resultView" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"/>
+            android:text="JakiśKolor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/stimulusTextView"
+            android:textColor="@android:color/white" android:textStyle="bold"
+            android:textSize="30sp" android:layout_marginBottom="56dp"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout" android:textAlignment="center"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.502"/>
 </android.support.constraint.ConstraintLayout>
